update post: What is the Amazon S3 Bucket 🪣 !!

--- a/cly2pz2ec000109jtd8k2228e.md
+++ b/cly2pz2ec000109jtd8k2228e.md
@@ -3,7 +3,8 @@ title: "What is the Amazon S3 Bucket 🪣 !!"
 datePublished: Mon Jul 01 2024 08:30:04 GMT+0000 (Coordinated Universal Time)
 cuid: cly2pz2ec000109jtd8k2228e
 slug: what-is-the-amazon-s3-bucket
-cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1719846089422/15173bbf-3546-4dac-a38b-1c38bcb16b8f.png
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1726497498198/eb327c9a-bd64-49f5-9797-ed8649473fdc.png
+ogImage: https://cdn.hashnode.com/res/hashnode/image/upload/v1726497506506/e714a270-2b1b-42fc-922d-ae3d09733a10.jpeg
 tags: 2articles1week, s3-bucket, amazons3
 
 ---
