update post: What is CORS !!  Let's Configure Cross-Origin Resource Sharing (CORS) for S3.

--- a/cm16dkmg8000209l54x1qafs7.md
+++ b/cm16dkmg8000209l54x1qafs7.md
@@ -4,6 +4,7 @@ datePublished: Tue Sep 17 2024 11:53:06 GMT+0000 (Coordinated Universal Time)
 cuid: cm16dkmg8000209l54x1qafs7
 slug: what-is-cors-lets-configure-cross-origin-resource-sharing-cors-for-s3
 cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1726569491117/fb1da76d-c3b8-4159-b9c2-89f81a072c68.jpeg
+tags: aws, cors, s3, codeconfigurations
 
 ---
 
@@ -293,6 +294,12 @@ Step 18 : Back on the AWS Console and update the copied CORS and save the change
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1726571059857/21a94d05-555b-4e35-b42f-08eb8edace1b.png align="center")
 
+Step 19 : Here is now our website or webpage running smoothly with Cross Origin Resource Sharing. Refresh the page and Bang 💫 here we go again.
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1726576928051/6a887ad3-0d36-4175-bd4b-d2f443bdf70a.gif align="center")
+
+Step 20 : <mark>Important steps whatever resources you created and uploaded it with versions even with delete marker waive them off right now.</mark>
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1726571066738/998ba6f3-5475-4e8c-a91e-cd0d4248a00d.png align="center")
 
-Here is now our website or webpage running smoothly with Cross Origin Resource Sharing.
+Thank Yu !!
