update post: Read Replicas Unveiled: Benefits and Limitations in AWS Database Solutions

--- a/cm1fj532d000v08l93j3v33gm.md
+++ b/cm1fj532d000v08l93j3v33gm.md
@@ -1,25 +1,55 @@
 ---
-title: "What is read replica of rds and how to create"
+title: "Read Replicas Unveiled: Benefits and Limitations in AWS Database Solutions"
 datePublished: Mon Sep 23 2024 21:38:55 GMT+0000 (Coordinated Universal Time)
 cuid: cm1fj532d000v08l93j3v33gm
-slug: what-is-read-replica-of-rds-and-how-to-create
+slug: read-replicas-unveiled-benefits-and-limitations-in-aws-database-solutions
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1727286491835/897da264-778f-4860-862e-8dfc0d3b5abf.jpeg
+tags: endpoints, rds-instance, read-replica, database-endpoints
 
 ---
 
+A read replica is a copy of the primary instance that reflects changes to the primary in almost real time, in normal circumstances. You can use a read replica to offload read requests or analytics traffic from the primary instance. Additionally, for disaster recovery, you can perform a regional migration.
+
+Read replicas are particularly useful for read-heavy workloads, as they can scale out beyond the capacity of a single DB instance. They are also well suited to scenarios where offloading queries is beneficial, even if there is a slight lag.
+
+Here are some reson that why we need read replica !!
+
+Offload work : Route queries from applications to the read replica to reduce the load on the primary instance. Disaster recovery : Perform a regional migration or failover to another region with a cross-region replica.
+
+Scaling : Read replicas can help scale out beyond the capacity of a single instance. Business Reporting : Read replicas can be used for business reporting queries without impacting the performance of the primary instance. Serving read traffic : Read replicas can be used to serve read traffic while the primary instance is unavailable.
+
+Create Read Replica feature linked to your Database Instance in the AWS Management Console. Amazon RDS for MySQL, PostgreSQL, MariaDB, and SQL Server enables the addition of as many as 15 read replicas for each Database Instance.
+
+**Step 1 :** Here we go again we‘ll use the old demo-database-1 which we have created earliar. Just click on Action and hit Create read replica.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127487014/033af670-77d6-4b9f-855e-576fdb6c29b7.png align="center")
+
+**Step 2 :** As well as we’ve created demo-database-1, here we’ll go through the same process. Just follow how the screenshorts are says and do as that.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127495047/ab007157-f579-4594-9e04-ca25533f27d2.png align="center")
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127496848/6d042326-bd25-4bad-93b0-9345658f6ccd.png align="center")
 
+**Step 3 :** Here we can see our replica is on creating state.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127499581/7afd0c31-9980-4117-ab22-f0c7e0fd5010.png align="center")
+
+**Step 4 :** The demo-database-1 and replica-demo instance created successfully.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127502850/11afde6c-df85-4c8e-9d3a-5c1cc060879d.png align="center")
 
+**Step 5 :** Here we’ll simply copy the endpoint of replica and we’ll try to connect.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127506319/ee4c17fc-c575-49a6-8c2e-109b1d4f9491.png align="center")
+
+**Step 6 :** With the instance which we’ve created earliar, we’ll first ssh into it and then then we’ll try to run the mysql host command . Here we can see practice\_demo\_db which we created when demo-database-1 was created.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127509763/295148dc-7595-433c-a676-11c7ff040f03.png align="center")
 
+**Step 7 :** Here we’ll try run the mysql host command with the endpoint along username password.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127511838/929a7506-12dd-4016-abcc-7aa56887b6cb.png align="center")
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127513251/fca63a89-31da-4711-8e62-4f0f7aefdcba.png align="center")
+**Step 8 :** Here we successfully connect with database and replica and where we easily login in to it and create resources .
+
+Overall, read replicas in AWS RDS enhance database performance by offloading read traffic from primary instances. Supporting up to 15 replicas for MySQL, PostgreSQL, MariaDB, and SQL Server, they improve application responsiveness. However, it’s essential to consider their limitations and best practices for optimal use. Effectively leveraging read replicas can significantly boost your database architecture and support growing application needs.
