update post: Maximize Application Performance : The Benefits of Using RDS Proxy

--- a/cm1fj7948000009mh0bf69dvm.md
+++ b/cm1fj7948000009mh0bf69dvm.md
@@ -1,29 +1,71 @@
 ---
-title: "Multi az reds deployment"
+title: "Maximize Application Performance : The Benefits of Using RDS Proxy"
 datePublished: Mon Sep 23 2024 21:40:36 GMT+0000 (Coordinated Universal Time)
 cuid: cm1fj7948000009mh0bf69dvm
-slug: multi-az-reds-deployment
+slug: maximize-application-performance-the-benefits-of-using-rds-proxy
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1727343466223/792e7439-b911-42ab-9382-c656888ceced.jpeg
+tags: rds, rds-configuration, rds-proxy, rdsproxy-aws-databasemanagement-cloudcomputing-devops-scalability-highavailability-security-connectionpooling-iamauthentication
 
 ---
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127582437/d3c4bf2d-5876-4e7c-a968-7f7df70545ec.png align="center")
+Amazon Relational Database Service (RDS) is a web service that helps you set up, manage and scale a relational database in the AWS cloud. It automates many database management tasks, such as backups, patching and provisioning so you can focus on your applications and business.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127592588/7be4cc0a-8427-4aa3-953b-e6709c42ca54.png align="center")
+Amazon RDS Proxy serves as an intermediary between your application and Amazon RDS database, streamlining connection management and minimizing disruptions during outages. By automatically connecting to a new database instance and preserving application connections, RDS Proxy ensures seamless failover, routing requests directly to the new instance for uninterrupted service. Experience enhanced application resilience and efficiency with this powerful tool.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127595154/a215ecfd-0c76-4ecb-b37d-0c34a4baf8d9.png align="center")
+### Benefits of RDS Proxy
 
-![]( align="center")
+**Improved scalability :** RDS Proxy pools and shares database connections, which helps your application scale.
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127598573/6c7e06aa-dd08-47e6-8b83-73f30ac806ef.png align="center")
+**Improved availability :** RDS Proxy can reduce database failover times by up to 66% and preserve application connections during failovers.
+
+**Improved security :** RDS Proxy can enforce AWS IAM authentication to databases and securely store credentials in AWS Secrets Manager.
+
+**Better database efficiency :** RDS Proxy reduces the number of database connections your application creates.
+
+**Cleaner function code :** RDS Proxy handles connection pooling, so your function code is simpler and easier to maintain.
+
+**Automatic scaling :** RDS Proxy scales automatically, so your database instance needs fewer resources for connection management.
+
+Whenever we run a query on an RDS instance, even if it’s a small query, several operations occur between the application and the database server to generate the query result. Despite its simplicity, there are behind-the-scenes processes that ensure the query is executed effectively.
+
+Step 1 : To create RDS Proxy Create Proxy endpoints created database, a secret key is required to create an Orchestrator Credentials Proxy. The secret key is an array of strings in base format that is used to set up the proxy's authentication. The Orchestrator can use the secret key to retrieve data from the proxy. If no valid values are found for the secret key, the proxy will not start.
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727348993831/09530fcd-c86f-4596-bf9e-a02f7afe2c56.png align="center")
+
+Step 2 : Hit Create proxy to create one, then give a proxy identifier, then your target group configuration select a RDS DB for proxy request server.
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727356991967/cef79093-5ace-4ecc-9b46-c129a4310bc5.png align="center")
+
+Step 3 : Then leave things as default and create a new secret key.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127600967/d3707c5d-d0a5-4bc7-bab1-7e8161647caf.png align="center")
 
+Step 4 : Give a name to demo-secret-key and follow the screenshots.
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727357025566/6d1d88ae-30e5-4c50-bafd-8572e0c2672e.png align="center")
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727357038422/fdbb121b-0f83-4a14-91c3-649e6de66e15.png align="center")
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727357050497/9b43ca0b-b794-4272-a357-e5b3f5e40fcb.png align="center")
+
+Step 5 : Select the demo-secret-key, define subnets then hit create proxy.
+
+![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127600967/d3707c5d-d0a5-4bc7-bab1-7e8161647caf.png align="center")
+
+Step 6 : Here we can see our demo-proxy-server is under creating stage.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127604558/de8aed4a-bdc6-41d5-9f6e-ddf52b7b461b.png align="center")
+
+Step 7 : Hurray !! Our demo-proxy-server is created successfully.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127607179/e593ed35-3aae-4e63-adc5-36f6d9c8eb53.png align="center")
 
+Step 8 : Let’s try to connect with proxy endpoint and let’s see our early created database are visible or not.
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127608907/f7276661-72e0-4c25-94c8-dd4cf37dbbb8.png align="center")
 
-![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127611814/f5b9b5d1-56e3-4045-b840-05cae791a982.png align="center")
+Step 9 : Here we can successfully connect to our mysql with proxy endpoint. And here we can see our last created databases.
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727127614646/d97bb548-79af-4f07-85fa-9883490b6833.jpeg align="center")
+
+Overall, RDS Proxy is a fully-managed service that enhances the performance and availability of Amazon RDS databases. It manages connections, reduces downtime during failovers and caches query responses to speed up read-heavy workloads all while providing robust security features.
