update post: Cost Optimization with AWS ServerLess Services

--- a/cm1ma4kfa00000ald11p48712.md
+++ b/cm1ma4kfa00000ald11p48712.md
@@ -6,6 +6,13 @@ slug: cost-optimization-with-aws-serverless-services
 
 ---
 
+| **Where to use Lambda** | Event-driven apps, microservices, automated backends, IoT and real-time file processing. |
+| --- | --- |
+| **Where not to use Lambda** | Long-running processes, high-performance computing, steady load apps and complex state management. |
+| **Security implications** | Least privilege, secure environment variables, VPC integration, IAM roles and logging |
+| **Performance considerations** | Mitigate cold starts, optimize resource allocation and manage concurrency limits. |
+| **Cost impacts** | Utilize pay-per-use, leverage free tier, regular cost review and optimization |
+
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727533271885/82f94822-54d5-49df-a3b5-09a091d3a27b.png align="center")
 
 ![](https://cdn.hashnode.com/res/hashnode/image/upload/v1727533311578/a9a0b632-e968-4b89-b7a7-f9388040ee7e.png align="center")
