update post: Simplifying Deployment with Docker: Building a Weather App

--- a/cm2p3da17000109l338n7feh9.md
+++ b/cm2p3da17000109l338n7feh9.md
@@ -3,6 +3,7 @@ title: "Simplifying Deployment with Docker: Building a Weather App"
 datePublished: Fri Oct 25 2024 18:54:47 GMT+0000 (Coordinated Universal Time)
 cuid: cm2p3da17000109l338n7feh9
 slug: simplifying-deployment-with-docker-building-a-weather-app
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1729882608719/1134f407-c271-49c8-8163-ecef9ae337d2.jpeg
 tags: docker
 
 ---
