update post: 🚀 Boosting Productivity with Docker Compose for MongoDB 🚀

--- a/cm2p3wwln000208mj7g7052vu.md
+++ b/cm2p3wwln000208mj7g7052vu.md
@@ -3,6 +3,7 @@ title: "🚀 Boosting Productivity with Docker Compose for MongoDB 🚀"
 datePublished: Fri Oct 25 2024 19:10:03 GMT+0000 (Coordinated Universal Time)
 cuid: cm2p3wwln000208mj7g7052vu
 slug: boosting-productivity-with-docker-compose-for-mongodb
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1729883473674/d495c726-505e-44c7-b0d4-2f11fabe2867.jpeg
 tags: mongodb, docker-compose-mongodb
 
 ---
