update post: 🚀🌟 Successful Deployment: Portainer on AWS EC2! 🌟🌐

--- a/cm2p45mr9000109mi3v8q6bi6.md
+++ b/cm2p45mr9000109mi3v8q6bi6.md
@@ -3,6 +3,7 @@ title: "🚀🌟 Successful Deployment: Portainer on AWS EC2! 🌟🌐"
 datePublished: Fri Oct 25 2024 19:16:50 GMT+0000 (Coordinated Universal Time)
 cuid: cm2p45mr9000109mi3v8q6bi6
 slug: successful-deployment-portainer-on-aws-ec2
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1729883865094/269c8982-2695-48ea-a96a-6065206b067b.jpeg
 tags: portainer, container-orchestration
 
 ---
