update post: 🌟 Master CI/CD: Automate Your Deployment with Jenkins, GitHub Webhooks & Nginx/Apache! 🌟 Introduction

--- a/cm2p5b7r3000108l208j90n8m.md
+++ b/cm2p5b7r3000108l208j90n8m.md
@@ -4,6 +4,7 @@ Introduction"
 datePublished: Fri Oct 25 2024 19:49:10 GMT+0000 (Coordinated Universal Time)
 cuid: cm2p5b7r3000108l208j90n8m
 slug: master-cicd-automate-your-deployment-with-jenkins-github-webhooks-nginxapache-introduction
+cover: https://cdn.hashnode.com/res/hashnode/image/upload/v1729885836938/4006b781-cd50-45d1-a105-69df5e4a5168.jpeg
 tags: deployment, cicd-cjy1vtdk2005kjjs17n8couc3, simple-web
 
 ---
